# Agentic-Design-Patterns-LangGraph

./: .gitignore  Agentic_Design_Patterns_Recap.md  README.md  chapter0.ipynb  chapter1-prompt-chaining.ipynb  chapter10-model-context-protocol.ipynb  chapter11-goal-setting-and-monitoring.ipynb  chapter12-exception-handling-and-recovery.ipynb  chapter13-human-in-the-loop.ipynb  chapter14-knowledge-retrieval(rag).ipynb  chapter15-inter-agent-communication(A2A).ipynb  chapter16-resource-aware-optiimization.ipynb  chapter17-reasoning-techniques.ipynb  chapter18-guardrails_safety-patterns.ipynb  chapter19-Evaluation-and-monitoring.ipynb  chapter2-routing.ipynb  chapter20-Prioritization.ipynb  chapter21-Exploration-and-Discovery.ipynb  chapter3-parallelization.ipynb  chapter4-reflection.ipynb  chapter5-tool-use.ipynb  chapter6-planner.ipynb  chapter7-multi-agent-collaboration.ipynb  chapter8-memory-management.ipynb  chapter9-learning-and-adaptation.ipynb  fastmcp_greet.py  llm.py  no_think_template.jinja  pyproject.toml  qwen3-workaround.jinja
