[project]
name = "agentic-design-patterns-langraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.19",
    "chromadb>=1.3.5",
    "fastmcp>=2.13.1",
    "google-genai>=1.48.0",
    "ipykernel>=7.0.1",
    "langchain>=1.0.1",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4",
    "langchain-google-genai>=3.1.0",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-openai>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.1",
    "requests>=2.32.5",
    "tavily-python>=0.7.12",
]
